src/bisonparser/parser.output
Terminals unused in grammar

    tk_INTERNAL_VARUSERTYPE
    tk_BREAK
    tk_CASE
    tk_CHAN
    tk_CONST
    tk_CONTINUE
    tk_DEFAULT
    tk_DEFER
    tk_ELSE
    tk_FALLTHROUGH
    tk_FOR
    tk_GO
    tk_GOTO
    tk_IF
    tk_INTERFACE
    tk_MAP
    tk_RANGE
    tk_RETURN
    tk_SELECT
    tk_STRUCT
    tk_SWITCH
    tk_TYPE
    tk_EXTENDS
    tk_IMPLEMENTS
    tk_THIS
    tk_NEW
    tk_SUPER
    tk_PUBLIC
    tk_PRIVATE
    tk_PTRSELECT
    tk_OVERRIDE
    tk_VOID
    tk_T_UINT
    tk_ADD
    tk_SUB
    tk_DIV
    tk_MOD
    tk_AND
    tk_OR
    tk_XOR
    tk_LSBRACKET
    tk_RSBRACKET
    tk_DOT
    tk_UNDERSCORE
    tk_COLON
    tk_LSHIFT
    tk_RSHIFT
    tk_EQXOR
    tk_EQOR
    tk_EQAND
    tk_EQANDXOR
    tk_EQRSHIFT
    tk_EQLSHIFT
    tk_LOGICAND
    tk_LOGICOR
    tk_EQADD
    tk_EQSUB
    tk_EQMUL
    tk_EQDIV
    tk_EQMOD
    tk_ANDXOR
    tk_NEG
    tk_LSS
    tk_GRT
    tk_NOTEQ
    tk_EQ
    tk_EQLSS
    tk_EQGRT
    tk_SHORTDECL
    tk_ARROW
    tk_INC
    tk_DEC
    tk_ELLIPSIS
    tk_TRUE
    tk_FALSE
    tk_IOTA


Grammar

    0 $accept: source $end

    1 source: package_stmt top_level_decl

    2 package_stmt: tk_PACKAGE tk_IDENT tk_SEMI

    3 top_level_decl: decl
    4               | top_level_decl decl

    5 decl: import_decl
    6     | common_decl

    7 import_decl: import
    8            | tk_IMPORT tk_LPAREN import_bodys tk_RPAREN tk_SEMI
    9            | tk_GOIMPORT tk_LPAREN import_bodys tk_RPAREN tk_SEMI

   10 import: tk_IMPORT import_body
   11       | tk_GOIMPORT import_body

   12 import_bodys: import_body
   13             | import_bodys import_body

   14 $@1: %empty

   15 import_body: tk_IDENT $@1 tk_STRINGLIT
   16            | tk_STRINGLIT

   17 common_decl: tk_VAR var_decl tk_SEMI
   18            | tk_VAR tk_LPAREN var_decl_list tk_SEMI tk_RPAREN tk_SEMI
   19            | class_decl

   20 var_decl_list: var_decl
   21              | var_decl_list tk_SEMI var_decl

   22 var_decl: var_type var_decl_name_list
   23         | var_type var_decl_name_list tk_ASSIGN var_expr_list
   24         | var_decl_name_list tk_ASSIGN var_expr_list

   25 var_decl_name_list: var_decl_name
   26                   | var_decl_name_list tk_COMMA var_decl_name

   27 var_decl_name: tk_IDENT

   28 var_type: builtin_type
   29         | pointer_type

   30 builtin_type: tk_T_STRING
   31             | tk_T_BOOL
   32             | tk_T_INT8
   33             | tk_T_UINT8
   34             | tk_T_BYTE
   35             | tk_T_INT16
   36             | tk_T_UINT16
   37             | tk_T_INT32
   38             | tk_T_UINT32
   39             | tk_T_RUNE
   40             | tk_T_INT64
   41             | tk_T_UINT64
   42             | tk_T_INT
   43             | tk_T_UINTPTR
   44             | tk_T_FLOAT32
   45             | tk_T_FLOAT64
   46             | tk_T_COMPLEX64
   47             | tk_T_COMPLEX128

   48 pointer_type: lookup_in_symtable tk_MUL

   49 lookup_in_symtable: tk_IDENT

   50 var_expr_list: var_expr
   51              | var_expr_list tk_COMMA var_expr

   52 var_expr: tk_IDENT
   53         | tk_STRINGLIT
   54         | tk_NUM

   55 $@2: %empty

   56 class_decl: tk_CLASS tk_IDENT $@2 tk_LCBRACKET tk_RCBRACKET


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    tk_INTERNAL_VARUSERTYPE (258)
    tk_BREAK (259)
    tk_CASE (260)
    tk_CHAN (261)
    tk_CONST (262)
    tk_CONTINUE (263)
    tk_DEFAULT (264)
    tk_DEFER (265)
    tk_ELSE (266)
    tk_FALLTHROUGH (267)
    tk_FOR (268)
    tk_GO (269)
    tk_GOTO (270)
    tk_IF (271)
    tk_INTERFACE (272)
    tk_MAP (273)
    tk_PACKAGE (274) 2
    tk_RANGE (275)
    tk_RETURN (276)
    tk_SELECT (277)
    tk_STRUCT (278)
    tk_SWITCH (279)
    tk_TYPE (280)
    tk_VAR (281) 17 18
    tk_CLASS (282) 56
    tk_EXTENDS (283)
    tk_IMPLEMENTS (284)
    tk_THIS (285)
    tk_NEW (286)
    tk_SUPER (287)
    tk_PUBLIC (288)
    tk_PRIVATE (289)
    tk_PTRSELECT (290)
    tk_OVERRIDE (291)
    tk_VOID (292)
    tk_IMPORT (293) 8 10
    tk_GOIMPORT (294) 9 11
    tk_T_STRING (295) 30
    tk_T_BOOL (296) 31
    tk_T_INT8 (297) 32
    tk_T_UINT8 (298) 33
    tk_T_BYTE (299) 34
    tk_T_INT16 (300) 35
    tk_T_UINT16 (301) 36
    tk_T_INT32 (302) 37
    tk_T_UINT32 (303) 38
    tk_T_RUNE (304) 39
    tk_T_INT64 (305) 40
    tk_T_UINT64 (306) 41
    tk_T_INT (307) 42
    tk_T_UINT (308)
    tk_T_UINTPTR (309) 43
    tk_T_FLOAT32 (310) 44
    tk_T_FLOAT64 (311) 45
    tk_T_COMPLEX64 (312) 46
    tk_T_COMPLEX128 (313) 47
    tk_ADD (314)
    tk_SUB (315)
    tk_MUL (316) 48
    tk_DIV (317)
    tk_MOD (318)
    tk_AND (319)
    tk_OR (320)
    tk_XOR (321)
    tk_ASSIGN (322) 23 24
    tk_LPAREN (323) 8 9 18
    tk_RPAREN (324) 8 9 18
    tk_LSBRACKET (325)
    tk_RSBRACKET (326)
    tk_LCBRACKET (327) 56
    tk_RCBRACKET (328) 56
    tk_COMMA (329) 26 51
    tk_DOT (330)
    tk_SEMI (331) 2 8 9 17 18 21
    tk_UNDERSCORE (332)
    tk_COLON (333)
    tk_LSHIFT (334)
    tk_RSHIFT (335)
    tk_EQXOR (336)
    tk_EQOR (337)
    tk_EQAND (338)
    tk_EQANDXOR (339)
    tk_EQRSHIFT (340)
    tk_EQLSHIFT (341)
    tk_LOGICAND (342)
    tk_LOGICOR (343)
    tk_EQADD (344)
    tk_EQSUB (345)
    tk_EQMUL (346)
    tk_EQDIV (347)
    tk_EQMOD (348)
    tk_ANDXOR (349)
    tk_NEG (350)
    tk_LSS (351)
    tk_GRT (352)
    tk_NOTEQ (353)
    tk_EQ (354)
    tk_EQLSS (355)
    tk_EQGRT (356)
    tk_SHORTDECL (357)
    tk_ARROW (358)
    tk_INC (359)
    tk_DEC (360)
    tk_ELLIPSIS (361)
    tk_STRINGLIT <semantic_value> (362) 15 16 53
    tk_NUM <semantic_value> (363) 54
    tk_IDENT <semantic_value> (364) 2 15 27 49 52 56
    tk_TRUE (365)
    tk_FALSE (366)
    tk_IOTA (367)


Nonterminals, with rules where they appear

    $accept (113)
        on left: 0
    source (114)
        on left: 1
        on right: 0
    package_stmt (115)
        on left: 2
        on right: 1
    top_level_decl (116)
        on left: 3 4
        on right: 1 4
    decl (117)
        on left: 5 6
        on right: 3 4
    import_decl (118)
        on left: 7 8 9
        on right: 5
    import (119)
        on left: 10 11
        on right: 7
    import_bodys (120)
        on left: 12 13
        on right: 8 9 13
    import_body (121)
        on left: 15 16
        on right: 10 11 12 13
    $@1 (122)
        on left: 14
        on right: 15
    common_decl (123)
        on left: 17 18 19
        on right: 6
    var_decl_list (124)
        on left: 20 21
        on right: 18 21
    var_decl (125)
        on left: 22 23 24
        on right: 17 20 21
    var_decl_name_list (126)
        on left: 25 26
        on right: 22 23 24 26
    var_decl_name (127)
        on left: 27
        on right: 25 26
    var_type (128)
        on left: 28 29
        on right: 22 23
    builtin_type (129)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 28
    pointer_type (130)
        on left: 48
        on right: 29
    lookup_in_symtable (131)
        on left: 49
        on right: 48
    var_expr_list (132)
        on left: 50 51
        on right: 23 24 51
    var_expr (133)
        on left: 52 53 54
        on right: 50 51
    class_decl (134)
        on left: 56
        on right: 19
    $@2 (135)
        on left: 55
        on right: 56


State 0

    0 $accept: . source $end

    tk_PACKAGE  shift, and go to state 1

    source        go to state 2
    package_stmt  go to state 3


State 1

    2 package_stmt: tk_PACKAGE . tk_IDENT tk_SEMI

    tk_IDENT  shift, and go to state 4


State 2

    0 $accept: source . $end

    $end  shift, and go to state 5


State 3

    1 source: package_stmt . top_level_decl

    tk_VAR       shift, and go to state 6
    tk_CLASS     shift, and go to state 7
    tk_IMPORT    shift, and go to state 8
    tk_GOIMPORT  shift, and go to state 9

    top_level_decl  go to state 10
    decl            go to state 11
    import_decl     go to state 12
    import          go to state 13
    common_decl     go to state 14
    class_decl      go to state 15


State 4

    2 package_stmt: tk_PACKAGE tk_IDENT . tk_SEMI

    tk_SEMI  shift, and go to state 16


State 5

    0 $accept: source $end .

    $default  accept


State 6

   17 common_decl: tk_VAR . var_decl tk_SEMI
   18            | tk_VAR . tk_LPAREN var_decl_list tk_SEMI tk_RPAREN tk_SEMI

    tk_T_STRING      shift, and go to state 17
    tk_T_BOOL        shift, and go to state 18
    tk_T_INT8        shift, and go to state 19
    tk_T_UINT8       shift, and go to state 20
    tk_T_BYTE        shift, and go to state 21
    tk_T_INT16       shift, and go to state 22
    tk_T_UINT16      shift, and go to state 23
    tk_T_INT32       shift, and go to state 24
    tk_T_UINT32      shift, and go to state 25
    tk_T_RUNE        shift, and go to state 26
    tk_T_INT64       shift, and go to state 27
    tk_T_UINT64      shift, and go to state 28
    tk_T_INT         shift, and go to state 29
    tk_T_UINTPTR     shift, and go to state 30
    tk_T_FLOAT32     shift, and go to state 31
    tk_T_FLOAT64     shift, and go to state 32
    tk_T_COMPLEX64   shift, and go to state 33
    tk_T_COMPLEX128  shift, and go to state 34
    tk_LPAREN        shift, and go to state 35
    tk_IDENT         shift, and go to state 36

    var_decl            go to state 37
    var_decl_name_list  go to state 38
    var_decl_name       go to state 39
    var_type            go to state 40
    builtin_type        go to state 41
    pointer_type        go to state 42
    lookup_in_symtable  go to state 43


State 7

   56 class_decl: tk_CLASS . tk_IDENT $@2 tk_LCBRACKET tk_RCBRACKET

    tk_IDENT  shift, and go to state 44


State 8

    8 import_decl: tk_IMPORT . tk_LPAREN import_bodys tk_RPAREN tk_SEMI
   10 import: tk_IMPORT . import_body

    tk_LPAREN     shift, and go to state 45
    tk_STRINGLIT  shift, and go to state 46
    tk_IDENT      shift, and go to state 47

    import_body  go to state 48


State 9

    9 import_decl: tk_GOIMPORT . tk_LPAREN import_bodys tk_RPAREN tk_SEMI
   11 import: tk_GOIMPORT . import_body

    tk_LPAREN     shift, and go to state 49
    tk_STRINGLIT  shift, and go to state 46
    tk_IDENT      shift, and go to state 47

    import_body  go to state 50


State 10

    1 source: package_stmt top_level_decl .
    4 top_level_decl: top_level_decl . decl

    tk_VAR       shift, and go to state 6
    tk_CLASS     shift, and go to state 7
    tk_IMPORT    shift, and go to state 8
    tk_GOIMPORT  shift, and go to state 9

    $default  reduce using rule 1 (source)

    decl         go to state 51
    import_decl  go to state 12
    import       go to state 13
    common_decl  go to state 14
    class_decl   go to state 15


State 11

    3 top_level_decl: decl .

    $default  reduce using rule 3 (top_level_decl)


State 12

    5 decl: import_decl .

    $default  reduce using rule 5 (decl)


State 13

    7 import_decl: import .

    $default  reduce using rule 7 (import_decl)


State 14

    6 decl: common_decl .

    $default  reduce using rule 6 (decl)


State 15

   19 common_decl: class_decl .

    $default  reduce using rule 19 (common_decl)


State 16

    2 package_stmt: tk_PACKAGE tk_IDENT tk_SEMI .

    $default  reduce using rule 2 (package_stmt)


State 17

   30 builtin_type: tk_T_STRING .

    $default  reduce using rule 30 (builtin_type)


State 18

   31 builtin_type: tk_T_BOOL .

    $default  reduce using rule 31 (builtin_type)


State 19

   32 builtin_type: tk_T_INT8 .

    $default  reduce using rule 32 (builtin_type)


State 20

   33 builtin_type: tk_T_UINT8 .

    $default  reduce using rule 33 (builtin_type)


State 21

   34 builtin_type: tk_T_BYTE .

    $default  reduce using rule 34 (builtin_type)


State 22

   35 builtin_type: tk_T_INT16 .

    $default  reduce using rule 35 (builtin_type)


State 23

   36 builtin_type: tk_T_UINT16 .

    $default  reduce using rule 36 (builtin_type)


State 24

   37 builtin_type: tk_T_INT32 .

    $default  reduce using rule 37 (builtin_type)


State 25

   38 builtin_type: tk_T_UINT32 .

    $default  reduce using rule 38 (builtin_type)


State 26

   39 builtin_type: tk_T_RUNE .

    $default  reduce using rule 39 (builtin_type)


State 27

   40 builtin_type: tk_T_INT64 .

    $default  reduce using rule 40 (builtin_type)


State 28

   41 builtin_type: tk_T_UINT64 .

    $default  reduce using rule 41 (builtin_type)


State 29

   42 builtin_type: tk_T_INT .

    $default  reduce using rule 42 (builtin_type)


State 30

   43 builtin_type: tk_T_UINTPTR .

    $default  reduce using rule 43 (builtin_type)


State 31

   44 builtin_type: tk_T_FLOAT32 .

    $default  reduce using rule 44 (builtin_type)


State 32

   45 builtin_type: tk_T_FLOAT64 .

    $default  reduce using rule 45 (builtin_type)


State 33

   46 builtin_type: tk_T_COMPLEX64 .

    $default  reduce using rule 46 (builtin_type)


State 34

   47 builtin_type: tk_T_COMPLEX128 .

    $default  reduce using rule 47 (builtin_type)


State 35

   18 common_decl: tk_VAR tk_LPAREN . var_decl_list tk_SEMI tk_RPAREN tk_SEMI

    tk_T_STRING      shift, and go to state 17
    tk_T_BOOL        shift, and go to state 18
    tk_T_INT8        shift, and go to state 19
    tk_T_UINT8       shift, and go to state 20
    tk_T_BYTE        shift, and go to state 21
    tk_T_INT16       shift, and go to state 22
    tk_T_UINT16      shift, and go to state 23
    tk_T_INT32       shift, and go to state 24
    tk_T_UINT32      shift, and go to state 25
    tk_T_RUNE        shift, and go to state 26
    tk_T_INT64       shift, and go to state 27
    tk_T_UINT64      shift, and go to state 28
    tk_T_INT         shift, and go to state 29
    tk_T_UINTPTR     shift, and go to state 30
    tk_T_FLOAT32     shift, and go to state 31
    tk_T_FLOAT64     shift, and go to state 32
    tk_T_COMPLEX64   shift, and go to state 33
    tk_T_COMPLEX128  shift, and go to state 34
    tk_IDENT         shift, and go to state 36

    var_decl_list       go to state 52
    var_decl            go to state 53
    var_decl_name_list  go to state 38
    var_decl_name       go to state 39
    var_type            go to state 40
    builtin_type        go to state 41
    pointer_type        go to state 42
    lookup_in_symtable  go to state 43


State 36

   27 var_decl_name: tk_IDENT .
   49 lookup_in_symtable: tk_IDENT .

    tk_MUL    reduce using rule 49 (lookup_in_symtable)
    $default  reduce using rule 27 (var_decl_name)


State 37

   17 common_decl: tk_VAR var_decl . tk_SEMI

    tk_SEMI  shift, and go to state 54


State 38

   24 var_decl: var_decl_name_list . tk_ASSIGN var_expr_list
   26 var_decl_name_list: var_decl_name_list . tk_COMMA var_decl_name

    tk_ASSIGN  shift, and go to state 55
    tk_COMMA   shift, and go to state 56


State 39

   25 var_decl_name_list: var_decl_name .

    $default  reduce using rule 25 (var_decl_name_list)


State 40

   22 var_decl: var_type . var_decl_name_list
   23         | var_type . var_decl_name_list tk_ASSIGN var_expr_list

    tk_IDENT  shift, and go to state 57

    var_decl_name_list  go to state 58
    var_decl_name       go to state 39


State 41

   28 var_type: builtin_type .

    $default  reduce using rule 28 (var_type)


State 42

   29 var_type: pointer_type .

    $default  reduce using rule 29 (var_type)


State 43

   48 pointer_type: lookup_in_symtable . tk_MUL

    tk_MUL  shift, and go to state 59


State 44

   56 class_decl: tk_CLASS tk_IDENT . $@2 tk_LCBRACKET tk_RCBRACKET

    $default  reduce using rule 55 ($@2)

    $@2  go to state 60


State 45

    8 import_decl: tk_IMPORT tk_LPAREN . import_bodys tk_RPAREN tk_SEMI

    tk_STRINGLIT  shift, and go to state 46
    tk_IDENT      shift, and go to state 47

    import_bodys  go to state 61
    import_body   go to state 62


State 46

   16 import_body: tk_STRINGLIT .

    $default  reduce using rule 16 (import_body)


State 47

   15 import_body: tk_IDENT . $@1 tk_STRINGLIT

    $default  reduce using rule 14 ($@1)

    $@1  go to state 63


State 48

   10 import: tk_IMPORT import_body .

    $default  reduce using rule 10 (import)


State 49

    9 import_decl: tk_GOIMPORT tk_LPAREN . import_bodys tk_RPAREN tk_SEMI

    tk_STRINGLIT  shift, and go to state 46
    tk_IDENT      shift, and go to state 47

    import_bodys  go to state 64
    import_body   go to state 62


State 50

   11 import: tk_GOIMPORT import_body .

    $default  reduce using rule 11 (import)


State 51

    4 top_level_decl: top_level_decl decl .

    $default  reduce using rule 4 (top_level_decl)


State 52

   18 common_decl: tk_VAR tk_LPAREN var_decl_list . tk_SEMI tk_RPAREN tk_SEMI
   21 var_decl_list: var_decl_list . tk_SEMI var_decl

    tk_SEMI  shift, and go to state 65


State 53

   20 var_decl_list: var_decl .

    $default  reduce using rule 20 (var_decl_list)


State 54

   17 common_decl: tk_VAR var_decl tk_SEMI .

    $default  reduce using rule 17 (common_decl)


State 55

   24 var_decl: var_decl_name_list tk_ASSIGN . var_expr_list

    tk_STRINGLIT  shift, and go to state 66
    tk_NUM        shift, and go to state 67
    tk_IDENT      shift, and go to state 68

    var_expr_list  go to state 69
    var_expr       go to state 70


State 56

   26 var_decl_name_list: var_decl_name_list tk_COMMA . var_decl_name

    tk_IDENT  shift, and go to state 57

    var_decl_name  go to state 71


State 57

   27 var_decl_name: tk_IDENT .

    $default  reduce using rule 27 (var_decl_name)


State 58

   22 var_decl: var_type var_decl_name_list .
   23         | var_type var_decl_name_list . tk_ASSIGN var_expr_list
   26 var_decl_name_list: var_decl_name_list . tk_COMMA var_decl_name

    tk_ASSIGN  shift, and go to state 72
    tk_COMMA   shift, and go to state 56

    $default  reduce using rule 22 (var_decl)


State 59

   48 pointer_type: lookup_in_symtable tk_MUL .

    $default  reduce using rule 48 (pointer_type)


State 60

   56 class_decl: tk_CLASS tk_IDENT $@2 . tk_LCBRACKET tk_RCBRACKET

    tk_LCBRACKET  shift, and go to state 73


State 61

    8 import_decl: tk_IMPORT tk_LPAREN import_bodys . tk_RPAREN tk_SEMI
   13 import_bodys: import_bodys . import_body

    tk_RPAREN     shift, and go to state 74
    tk_STRINGLIT  shift, and go to state 46
    tk_IDENT      shift, and go to state 47

    import_body  go to state 75


State 62

   12 import_bodys: import_body .

    $default  reduce using rule 12 (import_bodys)


State 63

   15 import_body: tk_IDENT $@1 . tk_STRINGLIT

    tk_STRINGLIT  shift, and go to state 76


State 64

    9 import_decl: tk_GOIMPORT tk_LPAREN import_bodys . tk_RPAREN tk_SEMI
   13 import_bodys: import_bodys . import_body

    tk_RPAREN     shift, and go to state 77
    tk_STRINGLIT  shift, and go to state 46
    tk_IDENT      shift, and go to state 47

    import_body  go to state 75


State 65

   18 common_decl: tk_VAR tk_LPAREN var_decl_list tk_SEMI . tk_RPAREN tk_SEMI
   21 var_decl_list: var_decl_list tk_SEMI . var_decl

    tk_T_STRING      shift, and go to state 17
    tk_T_BOOL        shift, and go to state 18
    tk_T_INT8        shift, and go to state 19
    tk_T_UINT8       shift, and go to state 20
    tk_T_BYTE        shift, and go to state 21
    tk_T_INT16       shift, and go to state 22
    tk_T_UINT16      shift, and go to state 23
    tk_T_INT32       shift, and go to state 24
    tk_T_UINT32      shift, and go to state 25
    tk_T_RUNE        shift, and go to state 26
    tk_T_INT64       shift, and go to state 27
    tk_T_UINT64      shift, and go to state 28
    tk_T_INT         shift, and go to state 29
    tk_T_UINTPTR     shift, and go to state 30
    tk_T_FLOAT32     shift, and go to state 31
    tk_T_FLOAT64     shift, and go to state 32
    tk_T_COMPLEX64   shift, and go to state 33
    tk_T_COMPLEX128  shift, and go to state 34
    tk_RPAREN        shift, and go to state 78
    tk_IDENT         shift, and go to state 36

    var_decl            go to state 79
    var_decl_name_list  go to state 38
    var_decl_name       go to state 39
    var_type            go to state 40
    builtin_type        go to state 41
    pointer_type        go to state 42
    lookup_in_symtable  go to state 43


State 66

   53 var_expr: tk_STRINGLIT .

    $default  reduce using rule 53 (var_expr)


State 67

   54 var_expr: tk_NUM .

    $default  reduce using rule 54 (var_expr)


State 68

   52 var_expr: tk_IDENT .

    $default  reduce using rule 52 (var_expr)


State 69

   24 var_decl: var_decl_name_list tk_ASSIGN var_expr_list .
   51 var_expr_list: var_expr_list . tk_COMMA var_expr

    tk_COMMA  shift, and go to state 80

    $default  reduce using rule 24 (var_decl)


State 70

   50 var_expr_list: var_expr .

    $default  reduce using rule 50 (var_expr_list)


State 71

   26 var_decl_name_list: var_decl_name_list tk_COMMA var_decl_name .

    $default  reduce using rule 26 (var_decl_name_list)


State 72

   23 var_decl: var_type var_decl_name_list tk_ASSIGN . var_expr_list

    tk_STRINGLIT  shift, and go to state 66
    tk_NUM        shift, and go to state 67
    tk_IDENT      shift, and go to state 68

    var_expr_list  go to state 81
    var_expr       go to state 70


State 73

   56 class_decl: tk_CLASS tk_IDENT $@2 tk_LCBRACKET . tk_RCBRACKET

    tk_RCBRACKET  shift, and go to state 82


State 74

    8 import_decl: tk_IMPORT tk_LPAREN import_bodys tk_RPAREN . tk_SEMI

    tk_SEMI  shift, and go to state 83


State 75

   13 import_bodys: import_bodys import_body .

    $default  reduce using rule 13 (import_bodys)


State 76

   15 import_body: tk_IDENT $@1 tk_STRINGLIT .

    $default  reduce using rule 15 (import_body)


State 77

    9 import_decl: tk_GOIMPORT tk_LPAREN import_bodys tk_RPAREN . tk_SEMI

    tk_SEMI  shift, and go to state 84


State 78

   18 common_decl: tk_VAR tk_LPAREN var_decl_list tk_SEMI tk_RPAREN . tk_SEMI

    tk_SEMI  shift, and go to state 85


State 79

   21 var_decl_list: var_decl_list tk_SEMI var_decl .

    $default  reduce using rule 21 (var_decl_list)


State 80

   51 var_expr_list: var_expr_list tk_COMMA . var_expr

    tk_STRINGLIT  shift, and go to state 66
    tk_NUM        shift, and go to state 67
    tk_IDENT      shift, and go to state 68

    var_expr  go to state 86


State 81

   23 var_decl: var_type var_decl_name_list tk_ASSIGN var_expr_list .
   51 var_expr_list: var_expr_list . tk_COMMA var_expr

    tk_COMMA  shift, and go to state 80

    $default  reduce using rule 23 (var_decl)


State 82

   56 class_decl: tk_CLASS tk_IDENT $@2 tk_LCBRACKET tk_RCBRACKET .

    $default  reduce using rule 56 (class_decl)


State 83

    8 import_decl: tk_IMPORT tk_LPAREN import_bodys tk_RPAREN tk_SEMI .

    $default  reduce using rule 8 (import_decl)


State 84

    9 import_decl: tk_GOIMPORT tk_LPAREN import_bodys tk_RPAREN tk_SEMI .

    $default  reduce using rule 9 (import_decl)


State 85

   18 common_decl: tk_VAR tk_LPAREN var_decl_list tk_SEMI tk_RPAREN tk_SEMI .

    $default  reduce using rule 18 (common_decl)


State 86

   51 var_expr_list: var_expr_list tk_COMMA var_expr .

    $default  reduce using rule 51 (var_expr_list)
